--- a/Introducere.html
+++ b/Introducere.html
@@ -114,18 +114,8 @@
 			<p> Pentru a utiliza Photoshop pe un computer care folosește <b>Windows</b>, acesta trebuie să îndeplinească
 				următoarele cerințe: </p>
 		</div>
-		<div class="lista">
-			<ul>
-				<li> <b>PROCESOR</b>: Intel® Core 2 sau AMD Athlon® 64; Procesor de 2 GHz sau mai mare. </li>
-				<li> <b>SISTEM DE OPERARE</b>: Microsoft Windows 7 cu Service Pack 1, Windows 8.1 sau Windows 10. </li>
-				<li> <b>MEMORIE RAM</b>: 2 GB sau mai mult RAM. </li>
-				<li> <b>STOCARE</b>: 3,1 GB spațiu disponibil pe hard disk pentru instalarea pe 32, respectiv 64 de
-					biți, + spațiul suplimentar necesar instalarii. </li>
-				<li> <b>PLACĂ VIDEO</b>: Afișaj 1024 x 768 cu culoare pe 16 biți și 512 MB sau mai mult de VRAM dedicat.
-				</li>
-				<li> <b>CONEXIUNE</b>: Conexiunea la internet este necesară pentru activarea software-ului, validarea
-					abonamentelor.</li>
-			</ul>
+		<div class="lista" id="lista1">
+			<center><input class="button" id="buton1" type="submit" name="button" value="Apăsați pentru a arăta cerințele."/></center>
 		</div> <br />
 	</div>
 
@@ -136,19 +126,8 @@
 			<p> Pentru a utiliza Photoshop pe un computer care folosește <b>Mac OS</b>, acesta trebuie să îndeplinească
 				următoarele cerințe: </p>
 		</div>
-		<div class="lista">
-			<ul>
-				<li> <b>PROCESOR</b>: Procesor Intel multicore cu suport pe 64 de biți. </li>
-				<li> <b>SISTEM DE OPERARE</b>: MacOS versiunea 10.13 (High Sierra), MacOS versiunea 10.12 (Sierra) sau
-					Mac OS X versiunea 10.11</li>
-				<li> <b>MEMORIE RAM</b>: 2 GB sau mai mult RAM. </li>
-				<li> <b>STOCARE</b>: 4 GB sau mai mult spațiu disponibil pe hard disk + spațiul liber suplimentar
-					necesar instalarii.</li>
-				<li> <b>PLACĂ VIDEO</b>: Afișaj 1024 x 768 cu culoare pe 16 biți și 512 MB sau mai mult de VRAM dedicat.
-				</li>
-				<li> <b>CONEXIUNE</b>: Conexiunea la internet este necesară pentru activarea software-ului, validarea
-					abonamentelor. </li>
-			</ul>
+		<div class="lista" id="lista2">
+			<center><input class="button" id="buton2" type="submit" name="button" value="Apăsați pentru a arăta cerințele."/></center>
 		</div> <br />
 	</div>
 
@@ -181,7 +160,7 @@
 	<div class="subsol">
 		<p>MIHAI ANDREI-ALEXANDRU, GRUPA 141, 2022</p>
 	</div>
-
+	<script src="Introducere.js"></script>
 </body>
 
 </html>
