--- a/Coming_soon.html
+++ b/Coming_soon.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Coming soon</title>
-		
-		<link href="Contact.css" rel="stylesheet" type="text/css">
+		<link href="Coming_soon.css" rel="stylesheet" type="text/css">
 		
 	</head>
 	<body>
