--- a/ProiectTW.html
+++ b/ProiectTW.html
@@ -10,15 +10,17 @@
 	<div class="grid-container">
 		<center>
 			<div class="grid-item">
-				<a href="Introducere.html">
+				<a id="href">
 					<img src="imagini/logo.png" alt="Logo_Photoshop" />
 				</a>
 			</div>
 		</center>
 		<div class="grid-item">
 			<h1> DESPRE ADOBE PHOTOSHOP </h1>
+			<h1 id="enter">Vă rog apăsați tasta ENTER pentru a accesa site-ul.</h1>
 		</div>
 	</div>
+	<script src="proiect.js"></script>
 </body>
 
 </html>
